# devopsdays-taipei-2025-observability-bootcamp

./: docker-compose-k6.yaml  docker-compose.yaml  k6-script-todo.js  k6-script.js  lab-01.md  lab-02.md  readme.md
.github/workflows/: build-fastapi-app.yaml  build-springboot-app.yaml
app/fastapi/: Dockerfile  README.md  main.py  pyproject.toml  webhook.py
app/springboot/: readme.md
app/springboot/src/main/java/com/example/app/: AppApplication.java
app/springboot/src/main/resources/: application.yaml
etc/: prometheus.yml
etc/grafana/: datasource.yml
etc/grafana/alerting/: alert-rule.yaml  contact-points.yaml
etc/grafana/dashboards/: cadvisor.json  spring-boot-observability.json
