[project]
name = "app"
version = "0.1.0"
description = "Demo application for observability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-asgi==0.54b1",
    "opentelemetry-instrumentation-asyncio==0.54b1",
    "opentelemetry-instrumentation-click==0.54b1",
    "opentelemetry-instrumentation-dbapi==0.54b1",
    "opentelemetry-instrumentation-fastapi==0.54b1",
    "opentelemetry-instrumentation-grpc==0.54b1",
    "opentelemetry-instrumentation-httpx==0.54b1",
    "opentelemetry-instrumentation-logging==0.54b1",
    "opentelemetry-instrumentation-psycopg2==0.54b1",
    "opentelemetry-instrumentation-redis==0.54b1",
    "opentelemetry-instrumentation-requests==0.54b1",
    "opentelemetry-instrumentation-sqlalchemy==0.54b1",
    "opentelemetry-instrumentation-sqlite3==0.54b1",
    "opentelemetry-instrumentation-starlette==0.54b1",
    "opentelemetry-instrumentation-threading==0.54b1",
    "opentelemetry-instrumentation-tortoiseorm==0.54b1",
    "opentelemetry-instrumentation-urllib==0.54b1",
    "opentelemetry-instrumentation-urllib3==0.54b1",
    "opentelemetry-instrumentation-wsgi==0.54b1",
    "prometheus-client>=0.22.0",
    "psycopg2>=2.9.10",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
